[tool.poetry]
name = "ig-post-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = "^0.14.4"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
langchain-google-genai = "^0.0.9"
crewai-tools = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
